@@ -8,67 +8,41 @@
     <artifactId>scala_study</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>net.alchim31.maven</groupId>-->
-                <!--<artifactId>scala-maven-plugin</artifactId>-->
-                <!--<version>3.2.2</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>idea-add-source</id>-->
-                        <!--<goals>-->
-                            <!--<goal>add-source</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>scala-compile-first</id>-->
-                        <!--<phase>process-resources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>compile</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>scala-test-compile-first</id>-->
-                        <!--<phase>process-test-resources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>testCompile</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>attach-scaladocs</id>-->
-                        <!--<phase>verify</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>doc-jar</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<scalaVersion>2.11.8</scalaVersion>-->
-                    <!--<recompileMode>incremental</recompileMode>-->
-                    <!--<useZincServer>true</useZincServer>-->
-                    <!--<args>-->
-                        <!--<arg>-unchecked</arg>-->
-                        <!--<arg>-deprecation</arg>-->
-                        <!--<arg>-feature</arg>-->
-                    <!--</args>-->
-                    <!--&lt;!&ndash;<jvmArgs>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<jvmArg>-Xms1024m</jvmArg>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<jvmArg>-Xmx1024m</jvmArg>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<jvmArg>-XX:PermSize=${PermGen}</jvmArg>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</jvmArgs>&ndash;&gt;-->
-                    <!--<javacArgs>-->
-                        <!--<javacArg>-source</javacArg>-->
-                        <!--<javacArg>${java.version}</javacArg>-->
-                        <!--<javacArg>-target</javacArg>-->
-                        <!--<javacArg>${java.version}</javacArg>-->
-                        <!--<javacArg>-Xlint:all,-serial,-path</javacArg>-->
-                    <!--</javacArgs>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.11.8</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*.scala</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
